--- a/src/css/general.css
+++ b/src/css/general.css
@@ -1,3 +1,7 @@
+/* ******************************************* */
+/* General Reusable Components */
+/* ******************************************* */
+
 * {
   padding: 0;
   margin: 0;
@@ -9,5 +13,19 @@ html {
 }
 
 body {
-  font-family: sans-serif;
+  font-family: "Roboto", sans-serif;
+  line-height: 1;
+  font-weight: 400;
 }
+
+.primary-heading {
+  font-size: 3.6rem;
+  text-transform: uppercase;
+  font-weight: 700;
+  margin-bottom: 3.2rem;
+}
+
+/* .grid-col-2 {
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+} */
