--- a/src/css/general.css
+++ b/src/css/general.css
@@ -19,13 +19,61 @@ body {
 }
 
 .primary-heading {
-  font-size: 3.6rem;
+  font-size: 4.4rem;
+  color: #333;
   text-transform: uppercase;
   font-weight: 700;
   margin-bottom: 3.2rem;
 }
 
-/* .grid-col-2 {
-  display: grid;
-  grid-template-columns: repeat(2, 1fr);
-} */
+.secondary-heading {
+  font-size: 3.6rem;
+  color: #333;
+  text-transform: uppercase;
+  font-weight: 700;
+  margin-bottom: 3.2rem;
+}
+
+.tertiary-heading {
+  font-size: 3rem;
+  font-weight: 500;
+  /* text-transform: uppercase; */
+  margin-bottom: 3.2rem;
+}
+.container {
+  /* 1140px */
+  max-width: 120rem;
+  padding: 0rem 3.2rem;
+  margin: 0 auto;
+}
+
+.tabs-container {
+  margin-top: 8rem;
+}
+
+.btn {
+  font-size: 3rem;
+  font-family: inherit;
+  font-weight: 500;
+  padding: 1.25rem 4.5rem;
+  border: none;
+  border-radius: 10rem;
+  cursor: pointer;
+  transform: all 0.3s;
+}
+
+p {
+  font-size: 1.8rem;
+  line-height: 1.8;
+  font-weight: 400;
+}
+
+span {
+  font-size: 1.4rem;
+  line-height: 1.6;
+  font-weight: 400;
+}
+
+.span-hidden {
+  visibility: hidden;
+}
