--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -10,6 +10,7 @@
 
   height: 9.6rem;
   padding: 0 4.8rem;
+  position: relative;
 }
 
 header p {
@@ -41,6 +42,25 @@ header p {
 .nav-list-item:active {
   color: #111;
 }
+
+/* Mobile */
+
+.btn-mobile-nav {
+  border: none;
+  background: none;
+  cursor: pointer;
+  display: none;
+}
+.icon-mobile-nav {
+  height: 4.8rem;
+  width: 4.8rem;
+  color: #333;
+}
+
+.icon-mobile-nav[name="close-outline"] {
+  display: none;
+}
+
 /* ******************************************* */
 /* Hero Section */
 /* ******************************************* */
@@ -69,12 +89,30 @@ header p {
   width: 100%;
 }
 
+/* sticky nav */
+
+.sticky .header {
+  position: fixed;
+  top: 0;
+  bottom: 0;
+  height: 8rem;
+  width: 100%;
+  padding-top: 0;
+  padding-bottom: 0;
+  background-color: rgba(255, 255, 255, 0.97);
+  z-index: 999;
+}
+
+.sticky .section-hero {
+  margin-top: 9.6rem;
+}
+
 /* ******************************************* */
 /* Personal Statement Section */
 /* ******************************************* */
 
 .section-personal {
-  padding: 4.8rem 0 9.6rem 0;
+  padding: 9.6rem 0;
 }
 
 .personal-text {
@@ -90,7 +128,7 @@ header p {
 
 .section-technical {
   background-color: #dee2e6;
-  padding: 4.8rem 0 9.6rem 0;
+  padding: 9.6rem 0;
 }
 
 .technical {
@@ -120,7 +158,7 @@ header p {
 
 .section-qualification {
   background-color: #495057;
-  padding: 4.8rem 0 9.6rem 0;
+  padding: 9.6rem 0;
 }
 
 .section-qualification h2 {
@@ -128,7 +166,8 @@ header p {
 }
 
 .tabs-container {
-  display: flex;
+  display: grid;
+  grid-template-columns: repeat(4, 1fr);
   justify-content: center;
   gap: 4.8rem;
   background-color: #fff;
@@ -171,7 +210,7 @@ header p {
 /* ******************************************* */
 
 .section-work {
-  padding: 4.8rem 0 9.6rem 0;
+  padding: 9.6rem 0;
   background-color: #e9ecef;
 }
 
@@ -201,11 +240,13 @@ header p {
 /* ******************************************* */
 
 .section-project {
-  padding: 4.8rem 0 9.6rem 0;
+  padding: 9.6rem 0;
 }
 
 .project-card {
   background-color: #dee2e6;
+  display: flex;
+  flex-direction: column;
 }
 
 .project-img {
@@ -220,20 +261,83 @@ header p {
 
 .project-text {
   margin-bottom: 3.2rem;
+  font-size: 1.6rem;
+  line-height: 1.8;
+  font-weight: 400;
 }
 
 .project-links {
   display: flex;
   gap: 4.8rem;
+  align-items: center;
   justify-content: center;
 }
 
-.project-link {
+.project-link:link,
+.project-link:visited {
   text-decoration: none;
   padding: 1.25rem 4.5rem;
   background-color: #fff;
   font-weight: 500;
-  font-size: 1.8rem;
+  font-size: 1.6rem;
   color: #333;
-  /* font-family: inherit;/ */
+  transition: all 3ms;
+}
+.project-link:hover,
+.project-link:active {
+  background-color: #495057;
+  color: #dee2e6;
+}
+
+/* ******************************************* */
+/* Footer Section */
+/* ******************************************* */
+
+.footer {
+  padding: 4.8rem 0 9.6rem 0;
+  background-color: #e9ecef;
+}
+
+.footer-grid {
+  display: grid;
+  grid-template-columns: repeat(4, 1fr);
+  gap: 9.6rem;
+  justify-content: center;
+}
+
+.footer-heading {
+  font-size: 2rem;
+  font-weight: 500;
+  margin-bottom: 1.6rem;
+  color: #333;
+}
+
+.footer-text {
+  font-size: 1.4rem;
+  font-weight: 400;
+  color: #333;
+  line-height: 1.6;
+}
+
+.footer-nav-list {
+  display: flex;
+  flex-direction: column;
+  justify-items: center;
+  list-style: none;
+  gap: 1.6rem;
+}
+
+.footer-list-item:link,
+.footer-list-item:visited {
+  text-decoration: none;
+  display: inline-block;
+  font-size: 1.4rem;
+  color: #333;
+  font-weight: 400;
+  transition: all 0.3s;
+}
+
+.footer-list-item:hover,
+.footer-list-item:active {
+  color: #555;
 }
