--- a/src/css/queries.css
+++ b/src/css/queries.css
@@ -209,7 +209,12 @@
   }
 
   .qualification-content {
-    padding: 0;
+    padding: 3rem;
+    height: 32rem;
+  }
+
+  .btn {
+    padding: 0.75rem 0;
   }
   .tabs-container {
     gap: 2.4rem;
@@ -218,7 +223,12 @@
 
   .footer-grid {
     grid-template-columns: repeat(1, 1fr);
-    gap: 4.8rem;
+    gap: 2.4rem;
     justify-items: center;
+    text-align: center;
+    
   }
+  /* .footer-heading {
+   
+  } */
 }
